--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
-    "framer-motion": "^11.0.24",
+    "firebase": "^10.10.0",
+    "framer-motion": "^11.0.28",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
